--- a/구구단/package.json
+++ b/구구단/package.json
@@ -1,10 +1,10 @@
 {
   "name": "guwebpack",
   "version": "1.0.0",
-  "description": "'하이'",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve --env development"
   },
   "author": "hongs",
   "license": "MIT",
@@ -16,8 +16,11 @@
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
+    "react-refresh": "^0.9.0",
     "webpack": "^5.22.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
