--- a/Baseball/package.json
+++ b/Baseball/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "guwebpack",
+  "name": "baseball",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "dev": "webpack serve --env development"
   },
   "author": "hongs",
@@ -11,14 +12,16 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.10.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
