--- a/Lotto/package.json
+++ b/Lotto/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "Lotto",
+  "name": "lotto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "dev": "webpack serve --env development"
   },
   "author": "Hongs",
