--- a/RSP/package.json
+++ b/RSP/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "baseball",
+  "name": "rsp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
@@ -13,6 +12,10 @@
   },
   "author": "hongs",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/shongs27/web1/issues"
+  },
+  "homepage": "https://github.com/shongs27/web1#readme",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
